--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@ footer {
 </head>
 <body>
   <h1>🌹 الوردة الحمراء</h1>
-  <img src="https://i.imgur.com/Abn5DwH.png" alt="Red Rose" class="rose" id="rose" />
   <div class="timer" id="timer">00:00</div>
   <div class="controls">
     <button onclick="startCustomTimer()">اختار وقتك</button>
@@ -86,7 +85,9 @@ footer {
     let timerInterval;
     let timeLeft = 0;
     let tabHiddenTime = null;
-    const rose = document.getElementById("rose");
+    const rose = document.createElement('div');
+    rose.classList.add('rose');
+    document.body.insertBefore(rose, document.querySelector('.timer'));
     const timerDisplay = document.getElementById("timer");
     const words = [
       "وينك! 😡",
